# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.570 2009/11/12 15:21:01 josejx Exp $

  12 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  Marked ppc/ppc64 stable for bug #280393.

  11 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  bump patchset to include nanojit.patch from upstream for sparc support,
  remove exports from ebuild that are no longer needed.

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  stable x86, security bug 280393

*mozilla-firefox-3.5.5 (07 Nov 2009)

  07 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-firefox-3.5.5.ebuild:
  security bump

  04 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  apply patch in topsrc dir bug #291797

  04 Nov 2009; Thomas Anderson <tanderson@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  stable amd64, as requested by Anarchy.

  30 Oct 2009; Jeroen Roovers <jer@gentoo.org> mozilla-firefox-3.5.4.ebuild:
  Stable for HPPA (bug #290892).

  30 Oct 2009; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0.13.ebuild, mozilla-firefox-3.0.14.ebuild:
  Mark -sparc as it sigbuses

  30 Oct 2009; Tristan Heaven <nyhm@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  Depend on xulrunner-1.9.1.4, not 1.9.1.3 (shoot me if I'm wrong)

  30 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  fix xulrunner dep for specific version

  29 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  block xulrunner-1.9.2 from being permitted to updated

*mozilla-firefox-3.5.4 (29 Oct 2009)

  29 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-firefox-3.5.4.ebuild:
  update for security bugs

  25 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>