@@ -237,7 +237,7 @@ DIST mozilla-firefox-3.5.5-zh-CN.xpi 126382 RMD160 1134c94e6b381d291bc0f77509725
 DIST mozilla-firefox-3.5.5-zh-TW.xpi 127839 RMD160 19b167f4f57aa751d6ee115857dac332ccd063a3 SHA1 92da339c26ff45d3fb54520128ef0bd5b8c668a1 SHA256 c80e0d1fab277a2a1e9c33d133f536aac71aeb32556eecd754e4eb6499aad4e5
 EBUILD mozilla-firefox-3.5.3-r1.ebuild 8673 RMD160 317994be553b3671b634e95cb3940d5c16b69356 SHA1 85eaea1fb2df00151a91a41b4f36fb49d0492ecc SHA256 5ba7c7d13657e2004cd4b8ddde07ba92002f2fa40c20aecadcffbddd42257f8c
 EBUILD mozilla-firefox-3.5.3.ebuild 9642 RMD160 3f66f007c90532b84b3c4cc03c61aafc8129f8a1 SHA1 4cff1404bd59df308a15818555d1d806f1247c48 SHA256 77dd21bb66f086f4675820a8b12541a15694b0ef060d797f199856ce471bafef
-EBUILD mozilla-firefox-3.5.4.ebuild 8677 RMD160 4b1be29a4acfb5110aec5d5b6a0b7493be882f73 SHA1 61c76239ec4b1df2ee073dc4a039f750d368d58b SHA256 b3189a4f7ce9ce07abdd6325dda16380fe275f402090c3fbe9f93a1cf48a7901
-EBUILD mozilla-firefox-3.5.5.ebuild 8485 RMD160 095b96a1d787f041f2a8b65a93cc28f7ce768507 SHA1 926262281a7b0b4bd242d2b014d82201d3ab5b17 SHA256 932a2801acf53a98ddcb1583340a958415ad97ffadd0f40bc483b3b5f1d50a0e
-MISC ChangeLog 107287 RMD160 e1fba11305828c8156e2cb1034fc47f95fbdb5d3 SHA1 d75ff822285d7bb73f142738d8b54b571247c54c SHA256 490de67ab2e1587021bcf380ba392ea6e8d1eaf0f7ce13e34b0c6d6ada817b8f
+EBUILD mozilla-firefox-3.5.4.ebuild 8636 RMD160 faccbe8dc6fb5f35fe52914c6dbad9bd5412700a SHA1 7209eab381283fffcc2be04407158bd5a8c8cd1e SHA256 9539112b85cfcf7fc8c5611588eef280d5acd1f2e0d5603ec2b4d80c19034296
+EBUILD mozilla-firefox-3.5.5.ebuild 8635 RMD160 bba337670f64552bbcf24ab2bfed465c9e01fd93 SHA1 c9408b3e6c3deb3a648dc0020ddea7bb7bdcc7fe SHA256 387a9b1993467b5584123b74746c431111bcddb75c70ebdb31c2b16908beb451
+MISC ChangeLog 107422 RMD160 415403010c195d155a13143c4e071e6de1265f84 SHA1 4e885a2eeed27fd1ca33a218b81999d2c2c6eced SHA256 c3b05348b0fcf2a8793a270d5adbc7c87e10763c0108eaca1dbd2e4e2f40335d
 MISC metadata.xml 860 RMD160 9dc7089f75140dda59a5ee9eaff41c35febd25bc SHA1 df2fae94e9f4a9fba7399aea0bfe0a38a1d01e89 SHA256 783b95078850c3b150069dcdead96113fe1a44036e61cae9d035f15c3bd1660e
