@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.570 2009/11/12 15:21:01 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.571 2009/11/20 18:23:46 armin76 Exp $
+
+  20 Nov 2009; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-3.5.4.ebuild, mozilla-firefox-3.5.5.ebuild:
+  Add hacks for sparc
 
   12 Nov 2009; Joseph Jezak <josejx@gentoo.org>
   mozilla-firefox-3.5.4.ebuild:
